--- a/.github/workflows/belgium-wallonia.yml
+++ b/.github/workflows/belgium-wallonia.yml
@@ -512,13 +512,10 @@ jobs:
         with:
           name: Namur-Statistics
           path: data/belgium/wallonia/difference/NAM
-      - name: Clean
-        run: |
-          if [ -f "data/belgium/wallonia/difference/diff.geojson" ]; then rm "data/belgium/wallonia/difference/diff.geojson"; fi
       - uses: actions/download-artifact@v3
         with:
           name: Wallonia-Difference
-          path: data/belgium/wallonia/difference/diff.geojson
+          path: data/belgium/wallonia/difference
       - name: Commit & Push
         run: |
           git config user.name github-actions[bot]
