--- a/report/package.json
+++ b/report/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@astrojs/svelte": "^2.0.1",
+    "@octokit/auth-action": "^2.0.3",
     "@octokit/rest": "^19.0.7",
     "astro": "^2.0.6"
   },
