Update Wegenregister (Flanders, Belgium)
Related to #471

--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -27,7 +27,6 @@ concurrency:
 
 env:
   MAPROULETTE_CHALLENGE_ID: 24090
-  FILENAME: Wegenregister_SHAPE_20240620
 
 jobs:
 
@@ -55,8 +54,8 @@ jobs:
           country: europe/belgium
       - name: Download & Unzip Wegenregister data
         run: |
-          wget "https://downloadagiv.blob.core.windows.net/wegenregister/${{ env.FILENAME }}.zip"
-          unzip -j "${{ env.FILENAME }}.zip" "Shapefile/Wegsegment.*"
+          wget "https://download.vlaanderen.be/bff/v1/Orders/248409/download/7fae9d05-e147-48d3-8dfa-d66de16a2fb6"
+          unzip -j "Wegenregister_SHAPE_20240620.zip" "Shapefile/Wegsegment.*"
       - name: Convert (and filter) Wegenregister to GeoJSON
         run: |
           ogr2ogr -f "GeoJSON" -progress \
