Run shortly after weekly dataset release, not almost a week after

--- a/.github/workflows/luxembourg.yml
+++ b/.github/workflows/luxembourg.yml
@@ -2,9 +2,9 @@ name: 🇱🇺 Luxembourg
 
 on:
   workflow_dispatch:
-  # Run every Sunday at 12:00 UTC
+  # Run every Monday at 16:00 UTC. Dataset gets updated at around 11 UTC.
   schedule:
-    - cron: "0 12 * * 0"
+    - cron: "0 16 * * 1"
   push:
     paths:
       - ".github/workflows/luxembourg.yml"
