--- a/.github/actions/openstreetmap-buffers/action.yml
+++ b/.github/actions/openstreetmap-buffers/action.yml
@@ -11,6 +11,7 @@ runs:
     - name: Get current date
       id: date
       run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+      shell: bash
     - name: Cache result
       id: cache-buffers
       uses: actions/cache@v2
