--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -27,6 +27,7 @@ concurrency:
 
 env:
   MAPROULETTE_CHALLENGE_ID: 14675
+  URBIS_DATE: "20251004"
 
 jobs:
 
@@ -54,8 +55,8 @@ jobs:
           country: europe/belgium
       - name: Download & Unzip UrbIS data
         run: |
-          wget --no-check-certificate "https://urbisdownload.datastore.brussels/UrbIS/Vector/M7/2D/UrbAdm/Daily/SHP_LITE/UrbAdm_SHP.zip"
-          unzip "UrbAdm_SHP.zip" "shp/UrbAdm_STREET_AXIS.*"
+          wget "https://urbisdownload.datastore.brussels/UrbIS/Vector/M8/UrbIS-Vector/GPKG/UrbISVector_31370_GPKG_04000_${{ env.URBIS_DATE }}.zip"
+          unzip "UrbISVector_31370_GPKG_04000_${{ env.URBIS_DATE }}.zip"
       - name: Convert (and filter) UrbIS to GeoJSON
         run: |
           ogr2ogr -f "GeoJSON" -progress \
@@ -63,17 +64,17 @@ jobs:
             -sql "@data/belgium/brussels/filter.sql" \
             -lco COORDINATE_PRECISION=6 \
             -fieldTypeToString "All" \
-            "UrbAdm_STREET_AXIS.geojson" \
-            "shp/UrbAdm_STREET_AXIS.shp"
+            "StreetAxes.geojson" \
+            "gpkg/UrbISVector_04000.gpkg" "StreetAxes"
       - name: Convert UrbIS fields to OpenStreetMap tags
-        run: node "script/convert-tags.js" -c "data/belgium/brussels/convert.json" "UrbAdm_STREET_AXIS.geojson" "UrbAdm_STREET_AXISTagged.geojson"
+        run: node "script/convert-tags.js" -c "data/belgium/brussels/convert.json" "StreetAxes.geojson" "StreetAxesTagged.geojson"
       - name: Generate UrbIS vector tiles
         run: |
           tippecanoe --force --no-feature-limit --no-tile-size-limit \
             --buffer=0 \
             --maximum-zoom=14 --minimum-zoom=14 \
             --layer="roads" \
-            --output="UrbAdm_STREET_AXISTagged.mbtiles" "UrbAdm_STREET_AXISTagged.geojson"
+            --output="StreetAxesTagged.mbtiles" "StreetAxesTagged.geojson"
       - name: Generate MapRoulette buffers
         uses: ./.github/actions/maproulette-buffers
         with:
@@ -91,7 +92,7 @@ jobs:
             --output="belgium-buffers.mbtiles" \
             "openstreetmap-lines-buffers.geojson" "openstreetmap-polygons-buffers.geojson" "maproulette-buffers.geojson"
       - name: Difference
-        run: node "script/difference.js" --output-dir="data/belgium/brussels/difference" "UrbAdm_STREET_AXISTagged.mbtiles" "belgium-buffers.mbtiles"
+        run: node "script/difference.js" --output-dir="data/belgium/brussels/difference" "StreetAxesTagged.mbtiles" "belgium-buffers.mbtiles"
       - name: Upload difference
         uses: actions/upload-artifact@v5
         with:
